# BeesBiz

./: .gitignore  README.md  a (2).md
.github/workflows/: golangci-lint.yml  lint-migrations.yml  main.yml
backend/: README.md
backend/deployments/: BeesBizData-0.1.0.tgz  Chart.yaml  makefile  postgresql-monitoring-setup.sh  rabbitmq-monitoring-setup.sh  server-deployment.yaml  values.yaml
backend/scripts/: drop-db.sql  proto-gen.sh  rest-handlers.sh
backend/src/: Dockerfile  go.mod  go.sum  makefile
docs/: 1-report.md
docs/part-1/: report.md
docs/part-2/: drop.sql  functions.sql  report.md  trigger.sql
docs/part1/: entities_3.md  report.md
docs/part2/: ddl.sql  definition.ddb  definition.sql  functions.sql  indexes.sql  main.md  main.tex  populate.sql  report.md
docs/part3/: README.md  main.tex
frontend/: package.json  tailwind.config.ts  vite.config.ts
frontend/messages/: bees.json  en.json  ru.json
frontend/project.inlang/: settings.json
frontend/src/: package-lock.json  package.json  tailwind.config.ts
iot/: Cargo.toml  Dockerfile  TODO  config.toml  example.sh  sensor.create.json  sensor.create.jsonc  sensor.delete.json  sensor.delete.jsonc
iot/src/: apiary.rs  config.rs  hive.rs  logging.rs  main.rs  messages.rs  types.rs
src/: create_user.sql  go.mod  go.sum  proto-gen.sh
src/deployments/: Chart.yaml  makefile  persistent-volumes.yaml  values.yaml
src/migrations/: create_user.sql  definition.sql  functions.sql  indexes.sql  trigger.sql
src/scripts/: ddl.sql  definition.sql  functions.sql  indexes.sql  trigger.sql
(+226 files in other folders)
