[package]
name = "apiary-genserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-rt = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
toml = "0.5"
lapin = { version = "2.0" }
tokio = { version = "1.28", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
